kubernetes/deployment/platform/envoy-gateway-system/envoy-gateway/app/config/gwclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-configuration
    namespace: envoy-gateway-system
