kubernetes/deployment/platform/envoy-gateway-system/envoy-gateway/app/config/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.home.arpa"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home.arpa"
      tls:
        certificateRefs:
          - kind: Secret
            name: tls-cert
      allowedRoutes:
        namespaces:
          from: All
